k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
    type: database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
      type: database
  template:
    metadata:
      name: db-pod
      labels:
        app: db
        type: database
    spec:
      containers:
        - name: tess-db
          image: postgres:14.2
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: db-data
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $DB_USER -h 127.0.0.1
            periodSeconds: 5
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
