k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
    type: caching
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
      type: caching
  template:
    metadata:
      name: redis-pod
      labels:
        app: redis
        type: caching
    spec:
      containers:
        - name: tess-redis
          image: redis:6
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 30
            periodSeconds: 1
            timeoutSeconds: 3
      restartPolicy: Always
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
