k8s/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq-deployment
  labels:
    app: sidekiq
    type: asynctask
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sidekiq
      type: asynctask
  template:
    metadata:
      name: sidekiq-pod
      labels:
        app: sidekiq
        type: asynctask
    spec:
      containers:
        - name: tess-sidekiq
          image: ghcr.io/YOUR_GITHUB_USERNAME/IMAGE_NAME:0.1.0
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 768Mi
          args:
            - bundle
            - exec
            - sidekiq
          volumeMounts:
            - name: uploads
              mountPath: /code/public/system
            - name: app-config
              subPath: tess.yml
              mountPath: /code/config/tess.yml
            - name: app-config
              subPath: secrets.yml
              mountPath: /code/config/secrets.yml
      imagePullSecrets:
      - name: app-secrets-ghcr
      restartPolicy: Always
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: sidekiq-uploads-pvc
        - name: app-config
          secret:
            secretName: app-secrets-config
            items:
              - key: tess.yml
                path: tess.yml
              - key: secrets.yml
                path: secrets.yml
