k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
    type: ror-app
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
