k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
    type: database
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
