k8s/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app-route
spec:
  host: localhost
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: app-service
status: {}
